# asset_maintenance_pro

./: README.md  pyproject.toml
asset_maintenance_pro/: api.py  hooks.py  patches.txt
asset_maintenance_pro/asset_maintenance/: events.py  notifications.py  permissions.py  scheduler.py
asset_maintenance_pro/asset_maintenance/doctype/asset_maintenance_settings/: asset_maintenance_settings.json  asset_maintenance_settings.py
asset_maintenance_pro/asset_maintenance/doctype/asset_meter_reading/: asset_meter_reading.json  asset_meter_reading.py
asset_maintenance_pro/fixtures/: custom_field.json  kanban_board.json  module_def.json  role.json  workspace.json
asset_maintenance_pro/patches/v1_0/: create_default_settings.py  create_default_sla_policies.py  create_default_taxonomy.py  create_extra_roles.py  create_kanban_board.py  create_period_report.py  create_workspace.py
asset_maintenance_pro/public/css/: asset_maintenance_pro.css
asset_maintenance_pro/public/js/: asset_custom.js  asset_maintenance_pro.js  maintenance_bom.js  maintenance_request.js  maintenance_technical_manual.js  maintenance_work_order.js
flutter_app/: ANDROID_STUDIO_SETUP.md  SETUP.md
flutter_app/asset_maintenance_app/: .gitignore  .metadata  QUICK_START.md  README.md  analysis_options.yaml  pubspec.yaml
flutter_app/asset_maintenance_app/android/: gradle.properties  settings.gradle
flutter_app/asset_maintenance_app/ios/: Podfile
flutter_app/asset_maintenance_app/lib/: main.dart
flutter_app/asset_maintenance_app/web/: index.html  manifest.json
(+106 files in other folders)
