[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "asset_maintenance_pro"
authors = [{ name = "Your Company", email = "dev@example.com" }]
description = "Advanced Asset Maintenance Management with Kanban, preventive scheduling, and branch-level access control"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<17.0.0"
erpnext = ">=15.0.0,<17.0.0"
